// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline> renders empty list 1`] = `
<FlatList
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flex": 1,
      },
    ]
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`<Timeline> renders with transactions 1`] = `
<FlatList
  data={
    Array [
      Object {
        "amount": 10,
        "createdAt": "10:30",
        "description": "he Beginner Archery and Beginner Crossbow",
        "id": 1,
        "type": "credit",
      },
      Object {
        "amount": -140,
        "createdAt": "10:30",
        "description": "he Beginner Archery and Beginner Crossbow",
        "id": 5,
        "type": "debit",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flex": 1,
      },
    ]
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;
